--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -50,8 +50,11 @@
         <td>:</td>
         <td>
             <select name="Kelompok" >
-            <option value="Kelompok 1">Kelompok 1</option>
-            <option value="Kelompok 2">Kelompok 2</option>
+            <option value="1-A">1-A</option>
+            <option value="1-B">1-B</option>
+            <option value="1-C">1-C</option>
+            <option value="1-D">1-D</option>
+            <option value="1-E`">1-E</option>
             </select>
         </td>
         </tr>
